--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mix Norte - Distribuidora de Açaí</title>
-    <meta name="description" content="A melhor distribuidora de açaí da região Norte. Bowls, polpas e bebidas de açaí frescos e de qualidade." />
+    <meta
+      name="description"
+      content="A melhor distribuidora de açaí da região Norte. Bowls, polpas e bebidas de açaí frescos e de qualidade."
+    />
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="Mix Norte - Distribuidora de Açaí" />
-    <meta property="og:description" content="A melhor distribuidora de açaí da região Norte. Bowls, polpas e bebidas de açaí frescos e de qualidade." />
+    <meta
+      property="og:description"
+      content="A melhor distribuidora de açaí da região Norte. Bowls, polpas e bebidas de açaí frescos e de qualidade."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://products-mixnorte.vercel.app/open-graph.jpg"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://products-mixnorte.vercel.app/open-graph.jpg"
+    />
   </head>
 
   <body>
