--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="A melhor distribuidora de açaí da região Norte. Bowls, polpas e bebidas de açaí frescos e de qualidade."
     />
     <meta name="author" content="Lovable" />
+    <link rel="shortcut icon" href="logo.png" type="image/png" />
 
     <meta property="og:title" content="Mix Norte - Distribuidora de Açaí" />
     <meta
