--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@grupomixnorte" />
     <meta
       name="twitter:image"
       content="https://products-mixnorte.vercel.app/open-graph.jpeg"
